# psu-mcp

./: .gitignore  CLAUDE.md  README.md  config.example.json  pyproject.toml
src/psu_mcp/: __init__.py  __main__.py  engagement.py  profiles.py  protocol.py  safety.py  server.py  session.py  telemetry.py  tools.py  vendors.py
tests/: conftest.py  test_engagement.py  test_hardware.py  test_profiles.py  test_protocol.py  test_rename_guard.py  test_safety.py  test_server_dispatch.py  test_session.py  test_telemetry.py  test_tools_basic.py  test_tools_pulse.py  test_tools_readonly.py  test_tools_set_voltage.py  test_tools_yank.py  test_vendors.py
