[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psu-mcp"
version = "0.1.0"
description = "MCP server for programmable bench PSU control (Korad KA3005P MVP) with autonomous bootloader-entry probing"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not hardware'"
markers = [
    "hardware: requires real RND 320-KA3005P (or KA3005P clone) on USB serial",
]
